tests/netperf/isilon_40G/udp_075/outgoing.txt
zephram-1# netserver -D
Starting netserver with host 'IN(6)ADDR_ANY' port '12865' and family AF_UNSPEC
^C
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-1# bash cpu_usage.sh netserver
^C
10.4 11.5 13.3 14.3 15.7 16.0 17.9 18.3 20.7 20.8 22.7 22.8 24.7 24.3 25.9 25.3 27.4 26.8 28.4 27.7 29.2 28.3 30.3 29.3 31.1 30.2 32.3 31.2 33.4 32.2 34.0 33.0 34.9 33.2 35.6 33.9 36.0 34.5 36.3 34.7 36.4 38.1 36.3 38.0 36.1 37.5 35.8 37.8 35.8 37.7 35.9 37.6
average: 29.0673
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# ./ipfwd 1 0.75
[ipfwd] starting
current:  12.195%, error:  12.2%, probability:  0.750%
current:  13.220%, error:  1.0%, probability:  0.750%
current:  13.159%, error:  0.1%, probability:  0.750%
current:  14.105%, error:  0.9%, probability:  0.750%
current:  13.971%, error:  0.1%, probability:  0.750%
current:  15.851%, error:  1.9%, probability:  0.750%
current:  16.583%, error:  0.7%, probability:  0.750%
^C
zephram-2# ipfw show | wc
      52     470    3265
zephram-2# 










────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# netperf -l 30 -H 192.168.166.32 -t UDP_STREAM
MIGRATED UDP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to 192.168.166.32 (192.168.166.32) port 0 AF_INET
Socket  Message  Elapsed      Messages                
Size    Size     Time         Okay Errors   Throughput
bytes   bytes    secs            #      #   10^6bits/sec

 16384   16384   30.01     2207810      0    9642.80
512000           30.01     2207808           9642.79

zephram-2# 










────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# bash cpu_usage.sh netperf
^C
13.5 16.6 21.6 26.4 29.0 31.1 36.1 37.3 42.0 47.2 47.6 48.2 53.3 53.0 57.8 57.0 62.0 60.9 65.9 64.4 69.4 74.1 72.2 77.1 74.9 79.8 77.1 82.0 79.3 84.4 83.1 80.2 85.2 81.9 87.0 83.6 88.9 85.3 90.3 86.9 92.0 88.1 93.2 89.3 94.3 90.1 95.1 91.1 96.2 91.8 96.9 92.7 97.7 93.2 98.4
average: 70.7945
zephram-2# 

